force-app/main/default/objects/CP_Brokerage__c/CP_Brokerage__c.object-meta.xml
<CustomObject>
    <label>CP Brokerage Invoices</label>
    <nameField>
        <displayFormat>CPB-{0000}</displayFormat>
        <label>CP Brokerage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CP Brokerage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>