force-app/main/default/objects/CP_Brokerage__c/fields/AOP__c.field-meta.xml
<CustomField>
    <fullName>AOP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AOP</label>
    <referenceTo>AOP__c</referenceTo>
    <relationshipLabel>CP Brokerage</relationshipLabel>
    <relationshipName>CP_Brokerage</relationshipName>
    <type>Lookup</type>
</CustomField>