force-app/main/default/objects/CP_Brokerage__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status (Invoice)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved By L1 - Site Heads</fullName>
            </value>
            <value>
                <fullName>Approved By L2 - MIS CRM / CRM Accounts</fullName>
            </value>
            <value>
                <fullName>Approved By L3- Billing CRM</fullName>
            </value>
            <value>
                <fullName>Approved By L4 - Accounts</fullName>
            </value>
            <value>
                <fullName>Rejected By L1 - Site Heads</fullName>
            </value>
            <value>
                <fullName>Rejected By L2 - MIS CRM / CRM Accounts</fullName>
            </value>
            <value>
                <fullName>Rejected By L3 - Billing CRM</fullName>
            </value>
            <value>
                <fullName>Rejected By L4 - Accounts</fullName>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approved By L3 - Accounts</fullName>
            </value>
            <value>
                <fullName>Rejected By L3 - Accounts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>