force-app/main/default/objects/CP_Brokerage__c/fields/CGST__c.field-meta.xml
<CustomField>
    <fullName>CGST__c</fullName>
    <label>CGST</label>
    <length>30</length>
    <type>Text</type>
</CustomField>