force-app/main/default/objects/CP_Brokerage__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner</label>
    <referenceTo>Broker__c</referenceTo>
    <relationshipName>CP_Brokerage</relationshipName>
    <type>Lookup</type>
</CustomField>