force-app/main/default/objects/CP_Brokerage__c/fields/CP_Invoice_Approver_L3__c.field-meta.xml
<CustomField>
    <fullName>CP_Invoice_Approver_L3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Invoice Approver L3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CP_Brokerage2</relationshipName>
    <type>Lookup</type>
</CustomField>