force-app/main/default/objects/CP_Brokerage__c/fields/CP_Invoice_Clearing_L2__c.field-meta.xml
<CustomField>
    <fullName>CP_Invoice_Clearing_L2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Invoice Clearing L2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CP_Brokerage6</relationshipName>
    <type>Lookup</type>
</CustomField>