force-app/main/default/objects/CP_Brokerage__c/fields/CP_MIS__c.field-meta.xml
<CustomField>
    <fullName>CP_MIS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP MIS</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CP_Brokerage4</relationshipName>
    <type>Lookup</type>
</CustomField>