force-app/main/default/objects/CP_Brokerage__c/fields/Date_Approved_by_L4__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved_by_L4__c</fullName>
    <label>Date Approved by L4</label>
    <type>DateTime</type>
</CustomField>