force-app/main/default/objects/CP_Brokerage__c/fields/Date_Approved_By_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved_By_Submitter__c</fullName>
    <label>Date Approved By Submitter</label>
    <type>DateTime</type>
</CustomField>