force-app/main/default/objects/CP_Brokerage__c/fields/IGST__c.field-meta.xml
<CustomField>
    <fullName>IGST__c</fullName>
    <label>IGST</label>
    <length>30</length>
    <type>Text</type>
</CustomField>