force-app/main/default/objects/CP_Brokerage__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <label>Invoice Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>