force-app/main/default/objects/CP_Brokerage__c/fields/SAP_Broker_code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Broker_code__c</fullName>
    <formula>Channel_Partner__r.SAP_CP_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Broker code</label>
    <type>Text</type>
</CustomField>