force-app/main/default/objects/CP_Brokerage__c/fields/SAP_Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>SAP_Posting_Date__c</fullName>
    <label>SAP Posting Date</label>
    <type>Date</type>
</CustomField>