force-app/main/default/objects/CP_Brokerage__c/fields/SAP_TDS__c.field-meta.xml
<CustomField>
    <fullName>SAP_TDS__c</fullName>
    <label>SAP TDS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>