force-app/main/default/objects/CP_Brokerage__c/fields/SGST__c.field-meta.xml
<CustomField>
    <fullName>SGST__c</fullName>
    <label>SGST</label>
    <length>30</length>
    <type>Text</type>
</CustomField>