force-app/main/default/objects/CP_Brokerage__c/fields/Total_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Total_Brokerage__c</fullName>
    <label>Total Brokerage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>